<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF1E6"
    tools:context=".View.journalEntry">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="160dp"
            android:layout_height="187dp"
            android:layout_marginEnd="256dp"
            android:layout_marginBottom="552dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/emotifylogo" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="160dp"
            android:layout_height="163dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/journal" />

        <EditText
            android:id="@+id/journalEntry"
            android:layout_width="383dp"
            android:layout_height="703dp"
            android:background="@color/lightblue"
            android:ems="10"
            android:fontFamily="serif-monospace"
            android:inputType="textMultiLine"
            android:text="Dear..."
            android:textSize="20sp"
            android:gravity="start|top"
            android:scrollHorizontally="false"
            android:overScrollMode="never"
            android:maxLines="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />


        <TextView
            android:id="@+id/journalDate"
            android:layout_width="291dp"
            android:layout_height="59dp"
            android:layout_marginTop="772dp"
            android:background="@color/army"
            android:backgroundTint="@color/army"
            android:fontFamily="@font/kaisei_tokumin_medium"
            android:rotation="0"
            android:text="Date"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="164dp"
            android:backgroundTint="@color/lightblue"
            android:fontFamily="@font/kaisei_tokumin_medium"
            android:text="save >>"
            android:textColor="@color/black"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.922"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>